--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "cmd-boost",
-	"version": "0.2.1",
+	"version": "0.3.0",
 	"description": "A tiny library that provides some convenient tools for command line users",
 	"main": "error.js",
 	"bin": {
 		"incognito": "./bin/incognito",
 		"lrun": "./bin/lrun",
-		"njs": "./bin/njs",
+		"runjs": "./bin/njs",
 		"rpath": "./bin/rpath",
 		"summon": "./bin/summon"
 	},
